Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9432

The NT Object Namespace extension has missing icons

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Shell
    • None

    Description

      Gaps appear in the NT Object Namespace window.
      Clicking on them gives the following errors in debug log:
      err../../dll/shellext/ntobjshex/ntobjns.cpp:245) PIDL NOT FOUND: Requested filename: SmApiPort
      ntobjns.cpp:1174: Unexpected failure 80070002.
      fixme../../dll/win32/shell32/CDefView.cpp:1731) failed to get details

      Attachments

        Activity

          People

            gigaherz gigaherz
            usurp usurp
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: