[NTOBJSHEX] * Make the info struct pointers const, to ensure we are not modifying the contents from the const idlists. * Disable checking that the provided PIDL is part of the folder. Fixes enumeration in ros, but feels a lot like hiding a bug. CORE-9432 #resolve

svn path=/trunk/; revision=67166