reactos/dll/shellext/ntobjshex/precomp.h
@@ -48,3 +48,6 @@ DEFINE_GUID(CLSID_NtObjectFolder,
 
 #include "ntobjns.h"
 #include "regfolder.h"
+
+// Workaround for missing entries
+#define DISABLE_STRICT_PIDL_CHECKS
